Typo, table 4.3 fixes

--- a/ref.bib
+++ b/ref.bib
@@ -36,9 +36,45 @@
 	booktitle    = {28th USENIX Security Symposium (USENIX Security 19)},
 	pages        = {1697--1714}
 }
+@inproceedings{wang2009intscope,
+  title={IntScope: Automatically Detecting Integer Overflow Vulnerability in X86 Binary Using Symbolic Execution.},
+  author={Wang, Tielei and Wei, Tao and Lin, Zhiqiang and Zou, Wei},
+  booktitle={NDSS},
+  year={2009},
+  organization={Citeseer}
+}
+@INPROCEEDINGS{5504701,
+  author={Wang, Tielei and Wei, Tao and Gu, Guofei and Zou, Wei},
+  booktitle={2010 IEEE Symposium on Security and Privacy}, 
+  title={TaintScope: A Checksum-Aware Directed Fuzzing Tool for Automatic Software Vulnerability Detection}, 
+  year={2010},
+  volume={},
+  number={},
+  pages={497-512},
+  doi={10.1109/SP.2010.37}}
+@inproceedings{sen2009dart,
+  title={DART: Directed Automated Random Testing.},
+  author={Sen, Koushik},
+  booktitle={Haifa Verification Conference},
+  volume={6405},
+  pages={4},
+  year={2009}
+}
 @misc{zendframework1,
 	title        = {{PHP Zend Framework 1}},
 	howpublished = {\url{https://github.com/zendframework/zf1}}
+}
+@inproceedings{moura2008z3,
+  title={Z3: An efficient SMT solver},
+  author={Moura, Leonardo de and Bj{\o}rner, Nikolaj},
+  booktitle={International conference on Tools and Algorithms for the Construction and Analysis of Systems},
+  pages={337--340},
+  year={2008},
+  organization={Springer}
+}
+@misc{llvmir,
+	title        = {{LLVM Intermediate Representation Language}},
+	howpublished = {\url{https://llvm.org/docs/LangRef.html}}
 }
 @misc{twentyfourteen_theme,
 	title        = {{WordPress Twenty Fourteen theme}},
@@ -660,6 +696,115 @@
 	volume       = 8,
 	pages        = {209--224}
 }
+@inproceedings{schwartz2015conflict,
+  title={Conflict-directed graph coverage},
+  author={Schwartz-Narbonne, Daniel and Sch{\"a}f, Martin and Jovanovi{\'c}, Dejan and R{\"u}mmer, Philipp and Wies, Thomas},
+  booktitle={NASA Formal Methods Symposium},
+  pages={327--342},
+  year={2015},
+  organization={Springer}
+}
+@article{godefroid2012sage,
+  title={SAGE: whitebox fuzzing for security testing},
+  author={Godefroid, Patrice and Levin, Michael Y and Molnar, David},
+  journal={Communications of the ACM},
+  volume={55},
+  number={3},
+  pages={40--44},
+  year={2012},
+  publisher={ACM New York, NY, USA}
+}
+@inproceedings{boonstoppel2008rwset,
+  title={RWset: Attacking path explosion in constraint-based test generation},
+  author={Boonstoppel, Peter and Cadar, Cristian and Engler, Dawson},
+  booktitle={International conference on Tools and Algorithms for the Construction and Analysis of Systems},
+  pages={351--366},
+  year={2008},
+  organization={Springer}
+}
+@inproceedings{hansen2009state,
+  title={State joining and splitting for the symbolic execution of binaries},
+  author={Hansen, Trevor and Schachte, Peter and S{\o}ndergaard, Harald},
+  booktitle={International Workshop on Runtime Verification},
+  pages={76--92},
+  year={2009},
+  organization={Springer}
+}
+@inproceedings{xie2016proteus,
+  title={Proteus: Computing disjunctive loop summary via path dependency analysis},
+  author={Xie, Xiaofei and Chen, Bihuan and Liu, Yang and Le, Wei and Li, Xiaohong},
+  booktitle={Proceedings of the 2016 24th ACM SIGSOFT International Symposium on Foundations of Software Engineering},
+  pages={61--72},
+  year={2016}
+}
+@inproceedings{godefroid2011automatic,
+  title={Automatic partial loop summarization in dynamic test generation},
+  author={Godefroid, Patrice and Luchaup, Daniel},
+  booktitle={Proceedings of the 2011 International Symposium on Software Testing and Analysis},
+  pages={23--33},
+  year={2011}
+}
+@inproceedings{godefroid2007compositional,
+  title={Compositional dynamic test generation},
+  author={Godefroid, Patrice},
+  booktitle={Proceedings of the 34th annual ACM SIGPLAN-SIGACT symposium on Principles of programming languages},
+  pages={47--54},
+  year={2007}
+}
+@inproceedings{yun2018qsym,
+  title={$\{$QSYM$\}$: A practical concolic execution engine tailored for hybrid fuzzing},
+  author={Yun, Insu and Lee, Sangho and Xu, Meng and Jang, Yeongjin and Kim, Taesoo},
+  booktitle={27th USENIX Security Symposium (USENIX Security 18)},
+  pages={745--761},
+  year={2018}
+}
+@phdthesis{cheng2016binary,
+  title={Binary Analysis and Symbolic Execution with angr},
+  author={Cheng, Eric},
+  year={2016},
+  school={PhD thesis, The MITRE Corporation}
+}
+@inproceedings{chipounov2009selective,
+  title={Selective symbolic execution},
+  author={Chipounov, Vitaly and Georgescu, Vlad and Zamfir, Cristian and Candea, George},
+  booktitle={Proceedings of the 5th Workshop on Hot Topics in System Dependability (HotDep)},
+  number={CONF},
+  year={2009}
+}
+@inproceedings{poeplau2019systematic,
+  title={Systematic comparison of symbolic execution systems: intermediate representation and its generation},
+  author={Poeplau, Sebastian and Francillon, Aur{\'e}lien},
+  booktitle={Proceedings of the 35th Annual Computer Security Applications Conference},
+  pages={163--176},
+  year={2019}
+}
+@article{sen2005cute,
+  title={CUTE: A concolic unit testing engine for C},
+  author={Sen, Koushik and Marinov, Darko and Agha, Gul},
+  journal={ACM SIGSOFT Software Engineering Notes},
+  volume={30},
+  number={5},
+  pages={263--272},
+  year={2005},
+  publisher={ACM New York, NY, USA}
+}
+@inproceedings{naderi2019cubismo,
+  title={Cubismo: Decloaking server-side malware via cubist program analysis},
+  author={Naderi-Afooshteh, Abbas and Kwon, Yonghwi and Nguyen-Tuong, Anh and Bagheri-Marzijarani, Mandana and Davidson, Jack W},
+  booktitle={Proceedings of the 35th Annual Computer Security Applications Conference},
+  pages={430--443},
+  year={2019}
+}
+@article{avgerinos2014automatic,
+  title={Automatic exploit generation},
+  author={Avgerinos, Thanassis and Cha, Sang Kil and Rebert, Alexandre and Schwartz, Edward J and Woo, Maverick and Brumley, David},
+  journal={Communications of the ACM},
+  volume={57},
+  number={2},
+  pages={74--84},
+  year={2014},
+  publisher={ACM New York, NY, USA}
+}
 @article{cadar2008exe,
 	title        = {EXE: Automatically generating inputs of death},
 	author       = {Cadar, Cristian and Ganesh, Vijay and Pawlowski, Peter M and Dill, David L and Engler, Dawson R},
@@ -718,6 +863,14 @@
   booktitle={27th USENIX Security Symposium (USENIX Security 18)},
   pages={377--392},
   year={2018}
+}
+@inproceedings{jensen2012thaps,
+  title={Thaps: automated vulnerability scanning of php applications},
+  author={Jensen, Torben and Pedersen, Heine and Olesen, Mads Chr and Hansen, Ren{\'e} Rydhof},
+  booktitle={Nordic conference on secure IT systems},
+  pages={31--46},
+  year={2012},
+  organization={Springer}
 }
 @inproceedings{barron2021click,
   title={Click This, Not That: Extending Web Authentication with Deception},
@@ -904,6 +1057,16 @@
 	author       = {Mishra, Shachee and Polychronakis, Michalis},
 	year         = 2018,
 	booktitle    = {Proceedings of the 34th Annual Computer Security Applications Conference}
+}
+@article{king1976symbolic,
+  title={Symbolic execution and program testing},
+  author={King, James C},
+  journal={Communications of the ACM},
+  volume={19},
+  number={7},
+  pages={385--394},
+  year={1976},
+  publisher={ACM New York, NY, USA}
 }
 @inproceedings{mishra2021sgxpecial,
 	title        = {SGXPecial: Specializing SGX Interfaces against Code Reuse Attacks},
