--- a/sections/chapter_five_ad.tex
+++ b/sections/chapter_five_ad.tex
@@ -6,7 +6,7 @@ So far, in the previous chapters we explored the viability of debloating web app
 One of the main drawbacks of relying on dynamic traces is the overhead of the instrumentation to collect such code coverage traces. 
 Moreover, line level granularity of code coverage as a representation of feature usage for applications lacks generalizability. 
 As a result, a slight variation in the usage behavior of users can result in broken functionality (i.e., functionality that has been removed via debloating). 
-At the same time, line level code coverage information can be skewed with an over representation of common and succesful code paths (e.g., successful login), and under representation of unsuccessful and less commonly used yet important features (e.g., forgot password) as evident by the debloated web applications by the Less is More~\cite{azad2019less}.
+At the same time, line level code coverage information can be skewed with an over representation of common and successful code paths (e.g., successful login), and under-representation of unsuccessful and less commonly used yet important features (e.g., forgot password) as evident by the debloated web applications by the Less is More~\cite{azad2019less}.
 
 In this chapter we introduce our solution to the aforementioned challenges in debloating web applications. 
 To this end, we propose the usage of the readily available web server logs to identify the used functionality by users. 
@@ -31,7 +31,7 @@ This preparation stage consists of populating concrete HTTP request parameters t
 Next, \animatedead{}'s PHP emulator executes the PHP application while replicating the behavior of the original PHP interpreter. 
 This step starts with parsing the PHP script to extract its AST (Abstract Syntax Tree), and then traversing the nodes of the AST while updating the state of the PHP emulator including the symbol table and variable values as well as the included files, defined classes objects and their properties. 
 
-Within our emulator, we pass the calls to PHP builtin APIs with concrete parameters to the original PHP implementation. 
+Within our emulator, we pass the calls to PHP built-in APIs with concrete parameters to the original PHP implementation. 
 For other APIs that change the state of the emulator or rely on symbolic parameters, we provide an alternative emulator-level implementation that we run instead of the original function. 
 \animatedead{} hooks into three categories of PHP APIs. 
 \begin{itemize}
@@ -56,14 +56,14 @@ Previous work in the realm of fuzzing as well as symbolic execution has explored
 In our implementation, we assign priorities based on the number of unexplored lines of code that each branch will execute. 
 
 During the emulation process, workers log the line numbers for the code that they emulate. 
-As a result, the output of the emulation process is a list of files and lines of code that are reachable based on the entry points the the web server logs. 
+As a result, the output of the emulation process is a list of files and lines of code that are reachable based on the entry points the web server logs. 
 From this point, the rest of the debloating procedure is analogous to those of dynamic debloating schemes, where the line coverage information is used to identify unused functions which will be removed through the debloating process. 
 
 In the remainder of this section, we explain the design and implementation of \animatedead{} in more detail and finally discuss the future work and its challenges. 
 
 \subsection{Identifying the web application entry points}
 The first step in emulating a web application is to identify the entry points and prepopulate the emulator environment to match those of the original web server. 
-\animatedead{} relies on the readily-available web server access logs to extract these information. 
+\animatedead{} relies on the readily-available web server access logs to extract this information. 
 For each entry in the logs, we follow the same logic of the web server to identify the underlying PHP script that is invoked to respond to this request. 
 
 Each HTTP request URI either directly targets an executable file (e.g., login.php) or points to a directory (e.g., /). 
@@ -92,17 +92,17 @@ Developers provide a combination of rewrite conditions (e.g., if the request URL
 Rewrite rules consist of string transformations on the request URL. 
 The output of the rewriting phase is a path to the PHP file that is then executed by the web server. 
 
-\animatedead{} incorporates a builtin web server that takes a request as input, and applies the rewrite rules to output the target PHP file. 
+\animatedead{} incorporates a built-in web server that takes a request as input, and applies the rewrite rules to output the target PHP file. 
 This way, we dynamically resolve the rewriting rules and the emulator is informed about the entry point based on log entries after URL rewriting rules are applied. 
-Orthogonally, some web applications incorporate builtin modules to handle routing of the requests and loading the corresponding modules. 
+Orthogonally, some web applications incorporate built-in modules to handle routing of the requests and loading the corresponding modules. 
 Given the capability of \animatedead{} in emulating PHP code, no special treatment is required in handling such applications that incorporate internal request routing. 
 
 \subsection{PHP Emulator}
 \label{sec:emulator}
 
-To analyze web applications concolically, we develop a PHP emulator that undestands PHP code and can traverse the AST, resolve function calls and populate the symbol table. 
+To analyze web applications concolically, we develop a PHP emulator that understands PHP code and can traverse the AST, resolve function calls and populate the symbol table. 
 We expanded the PHP emulator which is part of the MalMax PHP malware analysis research prototype~\cite{naderi2019malmax}. 
-Concretely, we added support for PHP constructs such as the syntax that was introduced in PHP 7, as well as support for inheritence, namespaces, and autoloaders along with various bug fixes. 
+Concretely, we added support for PHP constructs such as the syntax that was introduced in PHP 7, as well as support for inheritance, namespaces, and autoloaders along with various bug fixes. 
 Moreover, we incorporated the support for symbolic conditions, loops, and propagating symbolic values through the different function calls and assignments. 
 
 \animatedead{} by design passes the calls to PHP APIs to the original PHP engine. 
@@ -126,7 +126,7 @@ In such cases where \animatedead{} cannot assign a concrete value to the variabl
 While the actual value of symbolic variables are unknown, based on their source and the program conditions that has been satisfied during emulation, \animatedead{} limits the value set of symbols. 
 By doing so, we eliminate the execution of paths based on symbolic conditions that are unsatisfiable.
 
-Path conditions as well as other operations such as type casting limites the value set or the type of symbolic variables. 
+Path conditions as well as other operations such as type casting limits the value set or the type of symbolic variables. 
 As an example, casting a database query result to boolean enforces the boolean type on the output. 
 Similarly, concatenating symbolic variables with concrete strings produces a symbolic string which follows a deterministic pattern (e.g., has a known prefix and can be encoded as \texttt{/(prefix).*/}). 
 \animatedead{} encodes this pattern in the form of regular expressions. 
@@ -171,7 +171,7 @@ Completeness of \animatedead{}'s PHP emulator and path explosion are the main ch
 \label{sec:debugging}
 We started developing the PHP emulator by building simple test cases covering basic PHP operations. 
 We built these test cases by proactively identifying the limitations of our emulator and building test cases that exercise the underlying implementation. 
-For instance, we tested the propagation of symbolic variables through different forms of dataflow such as variable assignments, arrays, globals, and function calls. 
+For instance, we tested the propagation of symbolic variables through different forms of data flow such as variable assignments, arrays, globals, and function calls. 
 Moreover, we added test cases for language features introduced in PHP 7 such as the null coalesce (\texttt{a ?? b}) and the spaceship operators (\texttt{a <=> b}). 
 Finally, through static analysis, we identified the list of operations that phpMyAdmin performs on symbolic variables (e.g., POST parameters, Sessions, and Cookies) and isolated them in the form of test cases. 
 Currently, \animatedead{} includes 91 tests covering various concrete and symbolic test scenarios. 
@@ -192,12 +192,12 @@ Prioritizing paths that lead to new code coverage can speed up the exploration o
 Certain code structures can generate a high number of symbolic branches, with only a few of them leading to new coverage. 
 
 One example of such code constructs are symbolic loops. 
-\animatedead{} can be configured to only execute such loops for a limited number of iteratons. 
+\animatedead{} can be configured to only execute such loops for a limited number of iterations. 
 Nevertheless, limiting the number of iterations only works for simple loops such as \texttt{for} and \texttt{while} loops. 
 Identifying and limiting the iterations for recursive function calls and complex loops is a challenging task. 
 
-Moreover, we identified that the majority of symbolic branches explored by \animatedead{} lead to the the same code coverage. 
-Occasionaly the existing values in the symbol table are setup in a way that the execution will always end up in a certain code path (e.g., database connection error) regardless of the execution of symbolic loops and branches. 
+Moreover, we identified that the majority of symbolic branches explored by \animatedead{} lead to the same code coverage. 
+Ocasionaly the existing values in the symbol table are set up in a way that the execution will always end up in a certain code path (e.g., database connection error) regardless of the execution of symbolic loops and branches. 
 To identify and skip these executions, we prioritize any path that is more likely to lead to new coverage. 
 
 In our current debugging setup, we execute each entry point for up to 24 hours. 
@@ -209,7 +209,7 @@ Conversely, for code structures where a variable is set earlier in the applicati
 Listing~\ref{listing:path_explosion} demonstrates a code structure that is challenging for \animatedead{}'s path priority heuristic. 
 On line 3, we defined an \texttt{authenticate} function that verifies the login information for users. 
 Within this function, we perform various checks. 
-Given that the username and password values are symbolic (i.e., POST parameters), all of the branches in the authenticate function are satisfiable. 
+Given that the username and password values are symbolic (i.e., POST parameters), all the branches in the authenticate function are satisfiable. 
 Depending on the return value of \texttt{authenticate}, we set the \texttt{\$logged\_in} variable on lines 19 and 22. 
 
 Further down in the execution of this code on line 27, we cover new code depending on the value of \texttt{\$logged\_in}. 
@@ -217,7 +217,7 @@ From the perspective of path priority, all branches in \texttt{authenticate} can
 But the majority of these branches return the value of \texttt{false} which would guide the execution to cover the branch on line 31. 
 It is not uncommon for the branch on line 12 to not have the high priority to lead to the exploration of the code on line 28. 
 
-Potential solutions to this challenge include path merging (e.g., treating all paths within the \texttt{authenticate} function that return false as the same) and a forward dataflow analysis to identify values that are used in branch conditions. 
+Potential solutions to this challenge include path merging (e.g., treating all paths within the \texttt{authenticate} function that return false as the same) and a forward data flow analysis to identify values that are used in branch conditions. 
 
 
 
@@ -258,30 +258,3 @@ Potential solutions to this challenge include path merging (e.g., treating all p
     ?>
     \end{lstlisting}
 \end{figure}
-
-\section{Conclusion \& Future Work}
-
-In this dissertation we evaluated the potential benefits of debloating in terms of security. 
-To that end, we presented our pipeline to simulate usage behaviors, debloat web applications with file and function level granularity and introduced various metrics to quantify the security benefits of debloating web applications. 
-By evaluating our framework on four popular PHP applications (phpMyAdmin, MediaWiki, Magento, and WordPress) we demonstrated a decrease of 46.8\% on average in LLOC (Logical Lines Of Code) reduction and a comparable reduction in the cyclomatic complexity of debloated applications. 
-We discussed how the structure of applications affects the debloating results (e.g., monolithic design of WordPress leads to less debloating compared to modular ones such as Magento). 
-From the perspective of code reuse attacks, we witnessed that debloating disrupts the majority of publicly known gadget chains used in object injection attacks. 
-Similarly, debloating removed up to 60\% of high impact CVEs. 
-
-After demonstrating the effectiveness of debloating web applications from a security perspective, we proposed a novel approach for debloating. 
-Unlike the prior work which focuses on a single debloated application, we explored the idea of ``role-based debloating''. 
-Our system named \sys{} takes in the code coverage information of web application users and clusters users with similar usage behavior together. 
-Based on these clusters, it produces multiple versions of debloated web applications each of which are tailored for a group of users. 
-
-We started this project by conducting a user study to understand how experienced administrators and developers interact with web applications. 
-We then used this information in \sys{} to produce debloated web applications and evaluate their security metrics. 
-Our results show that role-based debloating can further reduce the size of web applications in terms of LLOC by 30\%, and remove the severe security vulnerabilities by up to 80\% for some roles, compared to the globally debloated application similar to our approach in Chapter~\ref{chap:lim}. 
-\sys{} also incorporates the content-delivery modules to transparently extract user identities from login requests and route their requests towards their custom debloated web applications. 
-Overall, our results indicate that role-based debloating is a practical approach with tangile security benefits.
-
-\subsection*{Future Work}
-
-In Chapter~\ref{chap:ad}, we discussed the design of \animatedead{} and summarized the existing challenges. 
-For the remainder of my PhD, I plan to complete building the \animatedead{}'s emulator to be able to correctly emulate popular PHP applications through the iterative debugging process discussed in Section~\ref{sec:debugging}. 
-Moreover, I plan to experiment and design an optimized path prioritization heuristic that fits the code structure of existing web applications and leads to a fast convergence of correct code coverage. 
-Finally, I plan to evaluate the debloating performance of \animatedead{} on popular PHP applications and report on the findings and security gains. 
