--- a/sections/chapter_four_dbltr.tex
+++ b/sections/chapter_four_dbltr.tex
@@ -42,6 +42,6 @@ We empirically demonstrate that \sys{} can be 30-80\% more effective than the st
 %Acknowledgements
 %\input{sections/acknowledgements.tex}
 % Availability
-\input{sections/dbltr/availability.tex}
+% \input{sections/dbltr/availability.tex}
 
-\input{sections/dbltr/appendix.tex}
+% \input{sections/dbltr/appendix.tex}
