--- a/sections/chapter_three_lim.tex
+++ b/sections/chapter_three_lim.tex
@@ -26,5 +26,5 @@ The remainder of this chapter is replicated from the paper titled ``Less is More
 \input{sections/lim/parts/discussion}
 % \input{sections/lim/parts/related}
 \input{sections/lim/parts/conclusion}
-\input{sections/lim/parts/availability}
-\input{sections/lim/parts/appendices}
+% \input{sections/lim/parts/availability}
+% \input{sections/lim/parts/appendices}
