--- a/sections/dbltr/appendix.tex
+++ b/sections/dbltr/appendix.tex
@@ -1,6 +1,6 @@
-\section{Appendix}
+% \section{Appendix}
 
-\begin{table*}[]
+\begin{table}[]
     \caption{List of CVEs and statistics of affected clusters and users after debloating.}
     \label{tab:cve_details}
     \centering
@@ -67,9 +67,9 @@
     \multicolumn{1}{|l|}{10}          & \multicolumn{1}{l|}{CVE-2016-4010}   & \multicolumn{1}{l|}{43\%}                  & \multicolumn{1}{l|}{6\%}               & RCE in shopping cart                     \\ \hline
     \end{tabular}
     \end{adjustbox}
-    \end{table*}
+    \end{table}
 
-\begin{table*}[t]
+\begin{table}[t]
 \caption{List of Critical PHP APIs}
 \label{tab:cacs}
 \begin{adjustbox}{max width=\textwidth}
@@ -99,4 +99,4 @@
     apache\_child\_terminate, posix\_kill, posix\_setpgid, posix\_setsid, posix\_setuid, dotnet\_load} \\ \hline 
 \end{tabular}
 \end{adjustbox}
-\end{table*}
+\end{table}
