--- a/sections/lim/parts/appendices.tex
+++ b/sections/lim/parts/appendices.tex
@@ -1,10 +1,11 @@
-\section{Appendix}
-\begin{table}[]
+\section*{Appendix}
+
+\begin{table}[ht!]
   \footnotesize
   \centering
 \caption{Comprehensive list of tutorials collected from the first two pages of Google search results}
 \label{table:listoftutorials}
-\scalebox{0.75}{
+\scalebox{0.7}{
 \begin{tabular}{|l|p{20cm}|}
 \hline
 \multicolumn{2}{|c|}{\textbf{phpMyAdmin}}  \\ \hline
