--- a/sections/lim/parts/debloating.tex
+++ b/sections/lim/parts/debloating.tex
@@ -23,7 +23,7 @@ remove a file, when none of the lines of code in that file were executed
 during the stimulation of the web application.
 \vspace{-2ex}
 \paragraph{$\bullet$ Function-level debloating:} In function-level debloating, not
-only can we remove entire files but we can also selectively remove some of
+only can we remove entire files, but we can also selectively remove some of
 the functions contained in other files. This is a more fine-grained approach
 which allows us to remove more code, than the more conservative, file-level
 debloating strategy.
