--- a/sections/lim/parts/discussion.tex
+++ b/sections/lim/parts/discussion.tex
@@ -92,7 +92,7 @@ code and verify their exploitability.
 \noindent\textbf{Debloating effectiveness:}
 Through our debloating experiments we discovered that, in terms of debloating,
 not all applications are ``equal.'' Modular web applications debloat
-significantly better than monolithic ones (such as Wordpress). We hope that
+significantly better than monolithic ones (such as WordPress). We hope that
 our findings will inspire different debloating strategies that lend themselves
 better to monolithic web applications which resist our current function-level
 and file-level debloating strategies.
