--- a/sections/lim/parts/related.tex
+++ b/sections/lim/parts/related.tex
@@ -13,7 +13,7 @@ JavaScript APIs in the wild and proposed the use of a client-side extension
 which controls which APIs any given website would get access to, depending
 on that website's level of trust. Schwarz et al. similarly utilize a browser
 extension to limit the attack surface of Chrome and show that they are able
-to protect users against microarchitectural and side-channel
+to protect users against micro-architectural and side-channel
 attacks~\cite{Schwarz2018}. These studies are orthogonal to our work since
 they both focus on the client-side of the web platform, whereas we focus on
 the server-side web applications.
@@ -28,7 +28,7 @@ application was a custom one, the authors were not able to report specifics
 in terms of the reduction of the programs attack surface, as that relates
 to CVEs. Contrastingly, by focusing on popular web applications, and utilizing function-level as well as file-level debloating, we were
 able to precisely quantify the reduction of vulnerabilities, both in terms
-of known CVEs as well as gadgets for PHP object-injection attacks.
+of known CVEs and gadgets for PHP object-injection attacks.
 
 
 \subsection{Debloating in other platforms}
