--- a/sections/chapter_one_intro.tex
+++ b/sections/chapter_one_intro.tex
@@ -1,32 +1,32 @@
 \chapter{Introduction}
 
-The World Wide Web has become the de-facto platform for online businesses, educational institutes and even government services. 
+The World Wide Web has become the de facto platform for online businesses, educational institutes and even government services. 
 The rapid growth in the online platforms is facilitated by the changes in the software development practices, most importantly development and wide use of off-the-shelf libraries~\cite{packagiststats, npmstatistics, pypi}. 
 % \red{CITE USAGE STATS}
 Given the importance of protecting online services against attackers, security researchers have explored proactive (e.g., static and dynamic code analysis to identify bugs~\cite{jovanovic2006pixy, dahse2010rips, alhuzali2018navex}, and 
 compartmentalization~\cite{vasilakis2018breakapp}) and reactive measures (e.g., web application firewalls, and honeypots~\cite{makiou2014improving, barron2021click}) have been proposed to protect web applications against attackers. 
 
 Despite our advancements in securing web applications, new vulnerabilities are identified every day~\cite{cvedetails}. 
-The principle of least privilege in security refers to the provision of minimal access to the required resources to limit future damage. 
+The principle of the least privilege in security refers to the provision of minimal access to the required resources to limit future damage. 
 In the realm of web application security, this principle can be applied in the form of software debloating. 
 Software debloating refers to the identification of unused web application features and its removal, thereby, preventing the abuse from the vulnerabilities that reside in unused features. 
 
 On one hand, popular web applications have become monolithic platforms that serve a variety of features for a wide range of users, many of which remain unused by their users in each deployment of the applications. 
-On the other hand, third-party libraries commonly used to build web applications also suffer from the same generalizability. 
-Nevertheless, attackers can still abuse the vulnerabilities in the unused code to gain control of the websites or exfilterate user data~\cite{drupalVulenrability, zendVulnerability, phpunitVulnerability, PHPGGC}. 
+On the other hand, third-party libraries commonly used to build web applications also suffer from the same generalizability, which essentially introduces unused code into the applications. 
+Nevertheless, attackers can still abuse the vulnerabilities in the unused code to gain control of the websites or exfiltrate user data~\cite{drupalVulenrability, zendVulnerability, phpunitVulnerability, PHPGGC}. 
 In this thesis, we propose debloating techniques for web applications to identify the unneeded code and remove it, therefore, protecting web applications against the exploitation of vulnerabilities that reside in unused features. 
-To that end, we explore dynamic and hybrid (concolic execution) analysis techniques and evaluate their effectiveness in protecting against exploits. 
-
+We explore dynamic and hybrid (concolic execution) analysis techniques and evaluate their effectiveness in protecting against exploits. 
+To that end, we discuss various debloating metrics from source code reduction and software security perspectives to quantify the performance of various debloating techniques. 
 
 
 
 \section{Contributions}
 
 In this thesis, we demonstrate the effectiveness of software debloating techniques on reducing the attack surface of web applications through source code and security metrics. 
-Moreover, we design and develop systems to debloat popular web applications and quantify their effectivess. The main contributions of this thesis are:
+Moreover, we design and develop systems to debloat popular web applications and quantify their effectiveness. The main contributions of this thesis are:
 
 \begin{itemize}
     \item We conduct an analysis on four popular PHP applications and characterize the source of code bloat in them. After identifying the source of the bloat, we propose two debloating approaches, namely file and function level debloating and evaluate their effectiveness in removing severe security vulnerabilities and reducing the attack surface of target web applications in Chapter~\ref{chap:lim}.
-    \item We propose the role-based debloating appproach. We conduct a user study with 60 experienced administrators and developers to understand how different users of the same web application interact with various features. We demonstrate that the one-size-fits-all debloating provides access to unnecessary features for a substantient group of users. We cluster users with similar usage behavior together and assign them to a role. Next, we provide a seamless content delivery scheme to transparently route users to their respective debloated web applications. We present the results of this work in Chapter~\ref{chap:dbltr}. 
+    \item We propose the role-based debloating approach. We conduct a user study with 60 experienced administrators and developers to understand how different users of the same web application interact with various features. Next, we demonstrate that the one-size-fits-all debloating provides access to unnecessary features for a substantial group of users. Then, we cluster users with similar usage behavior together and assign them to a role. Next, we provide a seamless content delivery scheme to transparently route users to their respective debloated web applications. We present the results of this work in Chapter~\ref{chap:dbltr}. 
     \item We characterize one of the main challenge of debloating as the collection of usage traces over long periods of time. To that end, we propose the use of concolic execution and emulation to explore code paths of PHP applications based on the requests from the readily available web server logs. We present the design and challenges of this work in Chapter~\ref{chap:ad}.
 \end{itemize}
