--- a/sections/dbltr/implementation.tex
+++ b/sections/dbltr/implementation.tex
@@ -30,10 +30,10 @@ This aggregation reduces the likelihood of users running into removed features (
 Web applications sometimes create temporary PHP files for caching purposes. 
 Other interactions with the web applications such as installing a new module can also result in the introduction of new PHP code. 
 For our debloating scheme, we consider an application at a stable state (i.e., required plugins and modules are already installed prior to debloating). 
-Therefore, we perform a clean up step through which we remove references from code-coverage traces that point to non-existing files in the original version of the applications. 
+Therefore, we perform a cleanup step through which we remove references from code-coverage traces that point to non-existing files in the original version of the applications. 
 
 Our goal in this paper is to demonstrate the debloating performance of popular web applications in their original format. 
-Specific to our user study, our clean up step will essentially remove newly installed modules during the user study experiments, but will keep the code in the original application that enables users to install new modules. 
+Specific to our user study, our cleanup step will essentially remove newly installed modules during the user study experiments, but will keep the code in the original application that enables users to install new modules. 
 
 \begin{figure}[]
     \centering
@@ -100,12 +100,12 @@ if ngx.var.request_method == "POST" and ngx.var.username ~= "" and ngx.status ==
 \end{lstlisting}
 
 For each web application, we provide a configuration file that defines the login endpoint, username form field, and the successful login indicator. 
-In the example of phpMyAdmin, successful login is comprised of a POST request towards the login endpoint ``/'' or ``index.php'' that receives a 302 HTTP response code which redirects the user to the administration page of the application (Line 2 in Listing~\ref{lst:lua}). 
+In the example of phpMyAdmin, successful login is composed of a POST request towards the login endpoint ``/'' or ``index.php'' that receives a 302 HTTP response code which redirects the user to the administration page of the application (Line 2 in Listing~\ref{lst:lua}). 
 
 We extract the username from the POST request with the field name of ``pma\_username'' (Line 4) 
-and then verify through the HTTP response code that we detected a successful login (Line 9). Finally, we extract the session cookie named ``phpmyadmin'' (Line 12) and store this user-to-session-cookie mapping in the Redis datastore for subsequent requests. 
+and then verify through the HTTP response code that we detected a successful login (Line 9). Finally, we extract the session cookie named ``phpmyadmin'' (Line 12) and store this user-to-session-cookie mapping in the Redis data store for subsequent requests. 
 
-For subsequent requests containing a valid session cookie, \sys{} first queries the username from the datastore and then determines the target web server based on the username mapping. 
+For subsequent requests containing a valid session cookie, \sys{} first queries the username from the data store and then determines the target web server based on the username mapping. 
 Steps 4, 5, and 6 in Figure~\ref{fig:system_architecture} depict this process. 
 Once the upstream web server is determined, traffic is routed to the corresponding web server. 
 Any subsequent log-out requests and timeouts invalidate the session-cookie mapping.
